<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_mode">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="developer_email" translatable="false">mvrlrd@ya.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="praktikum_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="authentication_troubles">Проблемы аутентификации</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_searched">История поиска</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="track_duration_time_format" translatable="false">mm:ss</string>
    <string name="null_timer" translatable="false">00:00</string>
    <string name="error_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="mediateka_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>

    <string name="empty_playlist">плейлист пуст</string>


    <string name="bad_request">"страница не найдена"</string>
    <string name="server_error">"Ошибка сервера"</string>
    <string name="error_connection_code" translatable="false">"-1"</string>
    <string name="bad_request_code" translatable="false">"400"</string>
    <string name="success_code" translatable="false">"200"</string>
    <string name="error_code" translatable="false">"500"</string>
    <string name="create_playlist">Создать</string>


    <string name="_00_00" translatable="false">00:00</string>
    <string name="add_to_playlist_title">Добавить в плейлист</string>


    <string name="quantity_of_tracks">%s трек%s</string>

    <string name="my_album_name" translatable="false">myalbum</string>

    <!--    search-->

    <string name="history_is_empty">История пуста</string>

    <!--    player-->
    <string name="impossible_to_play">Невозможно воспроизвести трек</string>

    <!--    add to playlist-->
    <string name="finish">Завершить</string>
    <string name="unsaved_data_caution">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="no_answer">НЕТ</string>
    <string name="yes_answer">ДА</string>
    <string name="quitting_question">Завершить создание плейлиста?</string>

    <string name="edit_playlist_title">Редактировать</string>
    <string name="edit_playlist_button">Сохранить</string>

    <string name="delete_playlist_dialog_title">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete_playlist_dialog_positive">Удалить</string>


    <string name="deleting_track_question">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="deleting_track_positive_answer">Удалить</string>
    <string name="deleting_track_negative_answer">Отмена</string>


    <string name="there_is_nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>


    <string name="playlist_created">"плейлист %s создан"</string>
    <string name="track_already_added">"Трек уже добавлен в плейлист %s"</string>
    <string name="track_added_to_playlist">"Добавлено в плейлист %s"</string>
    <string name="playlist_name">Название *</string>
    <string name="playlist_description">Описание</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="share_playlist">Поделиться</string>


    <plurals name="plural_tracks">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="plural_minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>