<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:buttonGravity="center_vertical"
        app:title="@string/settings"
        app:titleTextAppearance="@style/TitleStyle">

    </com.google.android.material.appbar.MaterialToolbar>

    <FrameLayout style="@style/FrameLayoutForSettingsItemStyle">

        <TextView
            style="@style/SettingsItems"
            android:text="@string/night_mode" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchTheme"
            style="@style/SwitchStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:width="32dp"
            android:height="18dp"
            android:checked="false"
            android:fontFamily="@font/ys_display_regular"
            app:showText="false" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/shareContainer"
        style="@style/FrameLayoutForSettingsItemStyle">

        <TextView
            style="@style/SettingsItems"
            android:text="@string/share" />

        <ImageView
            style="@style/IconStyle"
            android:src="@drawable/ic_share_icon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/supportContainer"
        style="@style/FrameLayoutForSettingsItemStyle">

        <TextView
            style="@style/SettingsItems"
            android:text="@string/support" />

        <ImageView
            style="@style/IconStyle"
            android:src="@drawable/baseline_support_agent_24" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreementContainer"
        style="@style/FrameLayoutForSettingsItemStyle">

        <TextView
            style="@style/SettingsItems"
            android:text="@string/agreement" />

        <ImageView
            style="@style/IconStyle"
            android:src="@drawable/ic_agreement_icon" />
    </FrameLayout>
</LinearLayout>
