<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:padding="@dimen/usual_padding">

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:checked="false"
            android:text="@string/night_mode"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            app:showText="false" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:padding="@dimen/usual_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@color/white"
            android:src="@drawable/ic_share_icon" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:padding="@dimen/usual_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@color/white"
            android:src="@drawable/ic_support_icon" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:padding="@dimen/usual_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@color/white"
            android:src="@drawable/ic_agreement_icon" />
    </FrameLayout>
</LinearLayout>