<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addition_menu_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_rectangle"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <include
        android:id="@+id/bar"
        layout="@layout/bottom_sheet_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/playlist_item"
        layout="@layout/playlist_layout"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar" />

    <TextView
        style="@style/AdditionMenuTextStyle"
        android:id="@+id/tv_share_playlist"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/share_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlist_item" />

    <TextView
        style="@style/AdditionMenuTextStyle"
        android:id="@+id/tv_edit_info"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:text="@string/edit_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_share_playlist" />

    <TextView
        style="@style/AdditionMenuTextStyle"
        android:id="@+id/tv_delete_playlist"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:text="@string/delete_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_info" />


</androidx.constraintlayout.widget.ConstraintLayout>