<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context=".search.ui.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/AppTheme.Toolbar"
        app:title="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/usual_padding"
        android:paddingEnd="@dimen/usual_padding">


        <EditText
            android:id="@+id/et_search_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_field_height"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/rectangle_border"
            android:drawableStart="@drawable/ic_search_icon"
            android:drawableTint="?attr/icon_search_color"
            android:backgroundTint="?attr/search_field_color"
            android:textColor="@color/black"
            android:textColorHint="?attr/hint_color"
            android:drawablePadding="11dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:singleLine="true"
            android:textSize="@dimen/text_size_small" />

        <ImageButton
            android:id="@+id/btn_clear_text"
            style="@style/XStyle"
            android:src="@drawable/ic_free_icon_font_cross" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/progress_bar_width"
                android:layout_height="@dimen/progress_bar_height"
                android:layout_gravity="center"
                android:layout_marginTop="148dp"
                android:indeterminateTint="@color/violet"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_history_title"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="@string/you_searched"
                android:textAlignment="center"
                android:textColor="?attr/day_night_background"
                android:textSize="@dimen/text_size_medium"
                android:visibility="gone" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_tracks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="13dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_clear_history"
                        style="@style/MainButtonStyle"
                        android:layout_marginBottom="50dp"
                        android:text="@string/clear_history" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </ScrollView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/placeholder_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="110dp"
            android:visibility="gone">

            <include
                android:id="@+id/info_placeholder"
                layout="@layout/info_place_holder_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_refresh"
                style="@style/MainButtonStyle"
                android:text="@string/refresh" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>
</LinearLayout>
